project(pyArborX LANGUAGES CXX)

add_subdirectory(/pybind11 /root/lib/pybind11)
find_package(ArborX REQUIRED)


set(PY_MODULES Point Box ExecutionSpace Experimental BVH Util)
set(PY_VIEWS PointView IntersectView intView1D)

#generate files for Viewtypes
file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/generated_files)
foreach(PY_VIEW IN LISTS PY_VIEWS)
  set(VIEW_NAME ${PY_VIEW})
  set(VIEW_TYPE ${PY_VIEW}Type)
  set(VIEW_BASE_TYPE ${PY_VIEW}BaseType)
  set(VIEW_INCLUDE "\n#include \"pyArborX_${PY_VIEW}.hpp\"")

  configure_file(include/pyArborX_Views.hpp.in generated_files/pyArborX_${PY_VIEW}.hpp)
  configure_file(src/pyArborX_Views.cpp.in generated_files/pyArborX_${PY_VIEW}.cpp)
endforeach()

# get source files for selected modules
foreach(PY_MODULE IN LISTS PY_MODULES)
  list(APPEND PY_SRC ${PROJECT_SOURCE_DIR}/src/pyArborX_${PY_MODULE}.cpp)
  list(APPEND MODULE_INCLUDES "\n#include \"pyArborX_${PY_MODULE}.hpp\"" )
  list(APPEND MODULE_GENERATORS "\n generate${PY_MODULE}Wrapper(m)")
endforeach()

# get source files for generated modules (views)
foreach(PY_VIEW IN LISTS PY_VIEWS)
  list(APPEND PY_SRC ${PROJECT_BINARY_DIR}/generated_files/pyArborX_${PY_VIEW}.cpp)
  list(APPEND MODULE_INCLUDES "\n#include \"pyArborX_${PY_VIEW}.hpp\"" )
  list(APPEND MODULE_GENERATORS "\n generate${PY_VIEW}Wrapper(m)")
endforeach()

string(REPLACE ";" " " MODULE_INCLUDES "${MODULE_INCLUDES}")

configure_file(pyArborX.cpp.in generated_files/pyArborX.cpp)

include_directories("./include")
include_directories("${PROJECT_BINARY_DIR}/generated_files")
PYBIND11_ADD_MODULE(pyArborX generated_files/pyArborX.cpp ${PY_SRC})
# set_target_properties(Point PROPERTIES OUTPUT_NAME ${PROJECT_BINARY_DIR})
target_link_libraries(pyArborX PRIVATE ArborX::ArborX)

# set the template options in config.hpp to the desired configuration
# include_directories(".")

# # definition of submodules included in build
# set(PY_MODULES Point Box Experimental BVH Views ExecutionSpace Util)
# # set(PY_MODULES Point Box Experimental BVH Util)

# # define type of views to be autogenerated TODO: transfer this form preproc to cmake
# set(PY_VIEWS PointView IntersectView intView1D)

# #generator for top level module file to be loaded in python
# foreach(PY_MODULE IN LISTS PY_MODULES)
  # add_subdirectory(./${PY_MODULE})
  # list(APPEND PY_IMPORT "from .${PY_MODULE} import * \n")
# endforeach()

# #generator for views module file to be loaded in python
# foreach(PY_VIEW IN LISTS PY_VIEWS)
  # list(APPEND PY_VIEW_IMPORT "from .${PY_VIEW} import * \n")
# endforeach()
         
# file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/pyArborX)
# file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/pyArborX/Views)
# file(WRITE ${PROJECT_BINARY_DIR}/pyArborX/__init__.py ${PY_IMPORT})
# file(WRITE ${PROJECT_BINARY_DIR}/pyArborX/Views/__init__.py ${PY_VIEW_IMPORT})
